fix: fix layout to avoid overflow and make the website responsive

--- a/odin-project/full-stack/javascript/object-contructor/mylibrary-project/style.css
+++ b/odin-project/full-stack/javascript/object-contructor/mylibrary-project/style.css
@@ -48,6 +48,27 @@ main {
   text-decoration: none;
 }
 
+@media (max-width: 425px){
+
+  .logo-section {
+    padding-left: 20px; 
+    padding-right: 0;
+  }
+
+  .logo-text{
+    display: none;
+  }
+
+  .header-nav ul {
+    padding: 0;
+  }
+
+  .header-nav-item a {
+    font-size: 0.9rem;
+  }
+
+}
+
 /* ADD BOOK SECTION */
 
 .add-book {
@@ -62,50 +83,32 @@ main {
   width: 90vw;
 }
 
+.small-inputs {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 10px;
+}
+
 .add-book-form {
   display: flex;
   flex-direction: column;
 }
 
-.small-inputs {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 1.8rem;
-}
-
-.small-inputs label{
-  align-items: center;
-  display: flex;
+.new-book-form-label {
   font-weight: 500;
-  padding: 0 10px;
+  margin-top: 10px;
 }
 
-.small-inputs input {
+.form-input {
   background-color: hsl(34, 20%, 70%);
   border: none;
   border-radius: 5px;
-  outline: none;
-}
-
-.book-read {
-  background-color: hsl(34, 20%, 70%);
-  border: none;
-  border-radius: 5px;
-}
-
-.description-label {
-  font-weight: 500;
-  padding-top: 20px;
-  padding-bottom: 10px;
+  height: 1.5rem;
+  width: 100%;
 }
 
 .description-input {
-  background-color: hsl(34, 20%, 70%);
-  border: none;
-  border-radius: 5px;
-  height: 3.7rem;
-  outline: none;
+  height: 3rem;
 }
 
 .add-book-btn {
